make lazy batch and batch-map of stream/iterator/iterable